Features : - Now, you can switch between dark and light theme without having to change OS theme. - Better indication for swipe actions. - Better dark theme layouts.
Bugfixes :
- Keyboard now is hiding when go or return throught fragments.
-

--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -34,5 +34,11 @@
     <string name="sort">Ordenar</string>
     <string name="share">Compartilhar</string>
     <string name="quantity_label">"Quantidade: "</string>
+    <string name="night_mode">Modo noturno</string>
+    <string name="night_off_msg">Modo noturno desligado</string>
+    <string name="night_on_msg">Modo noturno ligado</string>
+    <string name="swipe_delete_msg">Deletar</string>
+    <string name="done_swipe_msg">Marcar</string>
+    <string name="undo_swipe_msg">Desmarcar</string>
 
 </resources>
