--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -36,10 +36,10 @@
     <string name="swipe_to_edit">Editar</string>
     <string name="valor_total">Valor total</string>
     <string name="be_careful_title">Cuidado</string>
-    <string name="carts_with_category">Você tem algum(ns) carrinho(s) com essa categoria! Tem certeza?</string>
+    <string name="carts_with_category">Existem carrinho(s) vinculdos a esta categoria, Deseja realmente deleta-la?</string>
     <string name="select_items">Selecione os itens...</string>
     <string name="blank_name">Nome não pode ser vazio!</string>
-    <string name="select_category_color">Por favor, selecione uma cor para categoria!</string>
+    <string name="select_category_color">Por favor, selecione uma cor para a categoria!</string>
     <string name="choose_color">Escolha a cor</string>
     <string name="empty_category">Parece que você ainda não tem nenhuma categoria. Adicione uma nova :)</string>
     <string name="new_category">Nova categoria</string>
@@ -48,6 +48,7 @@
     <string name="store_hint">Loja</string>
     <string name="categories">Categorias</string>
     <string name="themes">Temas</string>
-    <string name="no_categories">Você não tem categorias</string>
+    <string name="no_categories">Sem categorias</string>
+    <string name="search_carts">Pesquisar carrinhos</string>
 
 </resources>
