--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,10 +35,10 @@
     <string name="night_on_msg">Night mode on</string>
     <string name="swipe_delete_msg">Delete</string>
     <string name="swipe_to_edit">Edit</string>
-    <string name="valor_total">Total value</string>
+    <string name="total_value">Total value</string>
     <string name="be_careful_title">Be careful!</string>
     <string name="carts_with_category">Looks like you have some carts with this category!\n\nAre you sure?</string>
-    <string name="select_items">Selecione os itens...</string>
+    <string name="select_items">Select items</string>
     <string name="blank_name">Name can\'t be blank!</string>
     <string name="select_category_color">Please, select a category color!</string>
     <string name="choose_color">Choose color</string>
@@ -65,13 +65,45 @@
     <string name="lowest_value">Value by Lowest</string>
     <string name="by_done">By Done</string>
     <string name="by_undone">By Undone</string>
-    <string name="user_hint">User</string>
+    <string name="user_hint" translatable="false">E-mail</string>
     <string name="password_hint">Password</string>
     <string name="forgot_password">Forgot password?</string>
     <string name="log_in">Log-in</string>
     <string name="or">or</string>
     <string name="msg_not_have_account">Don\'t have account?\nClick here</string>
     <string name="sign_in_with_google">Sign in with Google</string>
-    <string name="client_id">24013763873-mu1pqttcq64v4ua67vh3jminj916o65r.apps.googleusercontent.com</string>
+    <string name="client_id" translatable="false">24013763873-mu1pqttcq64v4ua67vh3jminj916o65r.apps.googleusercontent.com</string>
+    <string name="six_chars_hint">At least 6 char.</string>
+    <string name="uppercase_hint">At least 1 uppercase.</string>
+    <string name="number_hint">At least 1 number.</string>
+    <string name="create_account">Create account</string>
+    <string name="search_products">Search products</string>
+    <string name="create_account_error_detail">An error has occourred on creation of your account . Error detail: \n\n %1$s</string>
+    <string name="invalid_email">Not a valid e-mail.</string>
+    <string name="invalid_name">Not a valid name.</string>
+    <string name="password_requisites">Password not have minimum requirement.</string>
+    <string name="not_same_password">Passwords do not match.</string>
+    <string name="reenter_password">Repeat password</string>
+    <string name="login_error_detail">An error has occourred on login.\n\nError detail:  %1$s</string>
+    <string name="none_category">Sem categoria</string>
+    <string name="name_your_cart">Name your cart</string>
+    <string name="something_went_wrong">Something went wrong</string>
+    <string name="more">More</string>
+    <string name="more_info">More info</string>
+    <string name="required">(Required)</string>
+    <string name="sort_and_filter">Sort and Filter</string>
+    <string name="sort_by">Sort by</string>
+    <string name="category">Category</string>
+    <string name="filter_by">Filter by</string>
+    <string name="select_date_range">Select date range</string>
+    <string name="value">Value</string>
+    <string name="operator">Operator</string>
+    <string name="max" translatable="false">Max</string>
+    <string name="clear_all">Clear all</string>
+    <string name="apply">Apply</string>
+    <string name="min" translatable="false">Min</string>
+    <string name="select_dates">Select dates</string>
+    <string name="range">Range</string>
+    <string name="edit_category">Edit category</string>
     <!-- TODO: Remove or change this placeholder text -->
 </resources>
