done : Logic of offline user info retrieving; more visual info for user in case of error or warning; better control of downloading and control of files; added animation in login with google.

--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -111,5 +111,7 @@
     <string name="salvar">Salvar alterações</string>
     <string name="sign_up">Crie sua conta</string>
     <string name="please_fill_in_the_fields_to_create_a_new_account">Preencha todos os campos para criar sua conta</string>
+    <string name="no_internet_connection">Sem conexão com a internet</string>
+    <string name="msg_warning_invalid_password">A senha deve conter pelo menos 6 dígitos</string>
 
 </resources>
