--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -131,5 +131,17 @@
     <string name="select_date">Select date</string>
     <string name="initial_product_quantity" translatable="false">1</string>
     <string name="category_name_already_exists">Category name already exists.</string>
+    <string name="sorry_that_you_re_leaving">Sorry that you\'re leaving 😓</string>
+    <string name="to_delete_account_we_must_re_autenticate_your_user">To delete account, we must re-autenticate your user.</string>
+    <string name="account_deletion">Account deletion</string>
+    <string name="something_went_wrong_google_account">Something went wrong on login with google, please try again later.</string>
+    <string name="confirm">Confirm</string>
+    <string name="no_connection_google_account">To login with google, you must have internet connection.</string>
+    <string name="info_logged_with_google">Dear user, you have logged with google, so you must re-autenticate tapping in \'Sign in with Google\'.</string>
+    <string name="successfully_re_authenticated">✅ Successfully re-authenticated.</string>
+    <string name="user_already_re_autenticated">User already re-autenticated</string>
+    <string name="wrong_user_or_password">Wrong user or password.</string>
+    <string name="re_autenticate">Re-autenticate</string>
+    <string name="re_autentication_offline">To re-autenticate user, you must have internet connection.</string>
     <!-- TODO: Remove or change this placeholder text -->
 </resources>
